--- a/nekumo/servers/web/package.json
+++ b/nekumo/servers/web/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-uglify": "^0.11.0",
-    "grunt-ng-annotate": "^1.0.1"
+    "grunt-ng-annotate": "^1.0.1",
+    "grunt-text-replace": "^0.4.0",
+    "grunt-usemin": "^3.1.1"
   },
   "dependencies": {
     "grunt": "^0.4.5"
